added: confirmation dialog for Complete button,
closes https://github.com/kobotoolbox/enketo-express/issues/691

--- a/locales/en/translation-additions.json
+++ b/locales/en/translation-additions.json
@@ -42,6 +42,10 @@
                 ],
                 "automatic": "Proceed",
                 "manual": "Cancel"
+            },
+            "complete": {
+                "msg": "Would you like to complete this record and exit?",
+                "heading": "Confirm Completion"
             }
         },
         "prompt": {
