added: closed-modified status of discrepancy notes,
closes https://github.com/kobotoolbox/enketo-express/issues/717

--- a/locales/en/translation-additions.json
+++ b/locales/en/translation-additions.json
@@ -10,7 +10,8 @@
             "containsdatahidden": "This field contains data but is currently hidden from view",
             "autoclosed": "Query closed by system because this item was hidden",
             "valuechange": "Value changed from __previous__ to __new__",
-            "autoconstraint": "Automatic query for: __constraintMsg__"
+            "autoconstraint": "Automatic query for: __constraintMsg__",
+            "closedmodified": "Data changed after query was closed"
         }
     },
     "fieldsubmission": {
