added: Swedish translations

--- a/locales/en/translation.json
+++ b/locales/en/translation.json
@@ -264,6 +264,7 @@
     "ro": "Romanian",
     "sk": "Slovak",
     "supported": "Languages supported: ",
+    "sv": "Swedish",
     "sw": "Swahili",
     "th": "Thai",
     "vi": "Vietnamese",
