changed: updated Czech, Slovak, German, Dutch translations

--- a/locales/cs/translation.json
+++ b/locales/cs/translation.json
@@ -264,6 +264,7 @@
         "ro": "Rumunština",
         "sk": "Slovenština",
         "supported": "Podporované jazyky:",
+        "sv": "Švédština",
         "sw": "Svahilština",
         "th": "Thajština",
         "vi": "Vietnamština",
