--- a/locales/sk/translation.json
+++ b/locales/sk/translation.json
@@ -264,6 +264,7 @@
         "ro": "Rumunčina",
         "sk": "Slovenčina",
         "supported": "Podporované jazyky:",
+        "sv": "Švédčina",
         "sw": "Svahilčina",
         "th": "Thajčina",
         "vi": "Vietnamčina",
