changed: updated Swedish translations

--- a/locales/sv/translation.json
+++ b/locales/sv/translation.json
@@ -264,6 +264,7 @@
         "ro": "Rumänska",
         "sk": "Slovakiska",
         "supported": "Språk som stöds:",
+        "sv": "Svenska",
         "sw": "Swahili",
         "th": "Thailändska",
         "vi": "Vietnamesiska",
