fixed: issues with no-collapse, jr:choicename() changed: proper checkboxes in Firefox, translatable filepicker errors
https://github.com/kobotoolbox/enketo-express/issues/899
https://github.com/kobotoolbox/enketo-express/issues/900

--- a/locales/en/translation.json
+++ b/locales/en/translation.json
@@ -212,6 +212,10 @@
     "feedback": {
         "header": "Information"
     },
+    "filepicker": {
+        "notFound": "File __existing__ could not be found (leave unchanged if already submitted and you want to preserve it).",
+        "waitingForPermissions": "Waiting for user permissions."
+    },
     "form": {
         "chooseLanguage": "Choose Language",
         "logout": "log out",
