added: file widget functionality, closes https://github.com/kobotoolbox/enketo-express/issues/722 changed: file widget functionality, closes https://github.com/kobotoolbox/enketo-express/issues/729, https://github.com/kobotoolbox/enketo-express/issues/865

--- a/locales/en/translation.json
+++ b/locales/en/translation.json
@@ -214,6 +214,9 @@
     },
     "filepicker": {
         "notFound": "File __existing__ could not be found (leave unchanged if already submitted and you want to preserve it).",
+        "placeholder": "Click here to upload file. (< __maxSize__)",
+        "resetWarning": "This will remove the file. Are you sure you want to do this?",
+        "toolargeerror": "File too large (> __maxSize__)",
         "waitingForPermissions": "Waiting for user permissions."
     },
     "form": {
@@ -251,6 +254,7 @@
         "latitude": "latitude (x.y °)",
         "longitude": "longitude (x.y °)",
         "points": "points",
+        "removePoint": "This will completely remove the current geopoint from the list of geopoints and cannot be undone. Are you sure you want to do this?",
         "searchPlaceholder": "search for place or address"
     },
     "here": "here",
