changed: show helpful error message is SVG image cannot be found in Image Map question,
closes https://github.com/kobotoolbox/enketo-express/issues/883

--- a/locales/en/translation.json
+++ b/locales/en/translation.json
@@ -264,6 +264,9 @@
     "home": {
         "msg": "__appTitle__ is running! Please access Enketo forms from your __serverName__ installation."
     },
+    "imagemap": {
+        "svgNotFound": "SVG image could not be found"
+    },
     "langs": {
         "ar": "Arabic",
         "cs": "Czech",
