closes enketo-express/issues/948 closes enketo-express/issues/947 closes https://github.com/kobotoolbox/enketo-express/issues/880 partial enketo-express/issues/946

--- a/locales/en/translation.json
+++ b/locales/en/translation.json
@@ -190,7 +190,9 @@
         "support": "Contact __supportEmail__ please."
     },
     "drawwidget": {
-        "resetWarning": "This will remove the drawing, signature and/or file. Are you sure you want to do this?"
+        "annotation": "file and drawing",
+        "drawing": "drawing",
+        "signature": "signature"
     },
     "enketo": {
         "power": "Powered by"
@@ -216,9 +218,10 @@
         "header": "Information"
     },
     "filepicker": {
+        "file": "file",
         "notFound": "File __existing__ could not be found (leave unchanged if already submitted and you want to preserve it).",
         "placeholder": "Click here to upload file. (< __maxSize__)",
-        "resetWarning": "This will remove the file. Are you sure you want to do this?",
+        "resetWarning": "This will remove the __item__. Are you sure you want to do this?",
         "toolargeerror": "File too large (> __maxSize__)",
         "waitingForPermissions": "Waiting for user permissions."
     },
