added: Polish translations

--- a/locales/en/translation.json
+++ b/locales/en/translation.json
@@ -287,6 +287,7 @@
         "lo": "Lao",
         "nl": "Dutch",
         "no": "Norwegian",
+        "pl": "Polish",
         "ro": "Romanian",
         "sk": "Slovak",
         "supported": "Languages supported: ",
