added: Portugese translations, changed: updated Spanish translations

--- a/locales/en/translation.json
+++ b/locales/en/translation.json
@@ -288,6 +288,7 @@
         "nl": "Dutch",
         "no": "Norwegian",
         "pl": "Polish",
+        "pt": "Portugese",
         "ro": "Romanian",
         "sk": "Slovak",
         "supported": "Languages supported: ",
