--- a/locales/en/translation.json
+++ b/locales/en/translation.json
@@ -288,7 +288,7 @@
         "nl": "Dutch",
         "no": "Norwegian",
         "pl": "Polish",
-        "pt": "Portugese",
+        "pt": "Portuguese",
         "ro": "Romanian",
         "sk": "Slovak",
         "supported": "Languages supported: ",
